--- a/index.Rmd
+++ b/index.Rmd
@@ -211,7 +211,7 @@ grades %>% ggplot(aes(x=location, y=percent)) +
 3. In-class activities (10%): You will meet with your cohort and instructor once per week to work through an group activity focused on the material for that week. Attendance and completion of the activity counts towards this portion of your grade.
 4. Assignments (30%): You will complete weekly assignments in [Gradescope](https://www.gradescope.com/).  Weekly assignments will be due **at 11pm MST 5 days after the in-class activity** on the same content. (E.g. If you attend class on Mondays, your assignments will be due each Saturday at 11pm MST.)  *Assignment due dates may be shifted the week leading up to an exam.  Please see the calendar posted on D2L.* The lowest assignment grade will be dropped.
 5. Midterm exams (30%): There will be two in-class midterm exams (worth 15% each). Midterm exam 1 will be during the week of **September 22-28**; Midterm exam 2 during **November 4-10**. Potential midterm exam questions will be released the week prior to the exam, and you will be given a randomly chosen subset of these questions during your cohort's scheduled in-class time.
-6. Final group project (20%): In lieu of a final exam, you will complete a group project. The project will involve a complete data analysis on a research question of your choice, a written report, and a recorded 5-minute presentation.
+6. Final group project (20%): In lieu of a final exam, you will complete a group project. The project will involve a complete data analysis on a research question of your choice, a written report, and a recorded 5-minute presentation. Full details for the project are in the linked Google Doc:  [STAT 216 Project Instructions](https://docs.google.com/document/d/1pQy2zcuRCfObE6tzRZm39I9cQQvF3t9eTifWE3MOXk8/edit?usp=sharing)
 
 ### Late work policies
 
