--- a/index.Rmd
+++ b/index.Rmd
@@ -117,9 +117,10 @@ Two "textbooks" are required for this course:
 
 The *Stat 216 Coursepack* of in-class activities is available for purchase in the [MSU Bookstore](https://www.msubookstore.org/). Students are expected to bring the coursepack to class each day. 
 
-The coursepack is currently be printed and will be available for purchase through the [MSU Bookstore](https://www.msubookstore.org/) starting **Monday, January 11**. You may purchase the coursepack in person, or you may purchase online and have the coursepack shipped to you. Chapter 1 of the coursepack is provided here if you do not have the coursepack by your first day of class.
+The coursepack is currently being printed and will be available for purchase through the [MSU Bookstore](https://www.msubookstore.org/) starting **Monday, January 11**. You may purchase the coursepack in person, or you may purchase online and have the coursepack shipped to you. Chapter 1 of the coursepack is provided here if you do not have the coursepack by your first day of class.
 
-* [_STAT 216 Coursepack: Chapter 1_](Coursepack-Ch1.pdf)
+* [_STAT 216 Coursepack_: Preface](Coursepack-Preface.pdf)
+* [_STAT 216 Coursepack_: Chapter 1](Coursepack-Ch1.pdf)
 
 
 ### RStudio
