--- a/index.Rmd
+++ b/index.Rmd
@@ -216,7 +216,7 @@ _Blended sections:_
 You will meet with your cohort and instructor once per week to work through that week's coursepack group activity. Attendance and completion of the activity counts towards this portion of your grade. 
 
 * Activities must be completed on the activity worksheet. If you prefer to complete the activity on a pdf copy using a stylist-enabled device, please speak to your instructor, and he or she will provide you with the appropriate materials.
-* Activities will be checked for completion at the **beginning of the following class period**.
+* Activities will be checked for completion, both the in-class portion and the out-of-class portion of the activity, at the **beginning of the following class period**.
 * If you have an excused absence the day the activity is due (e.g., quarantine or ill), you may email your instructor a scanned copy of the completed activity for credit. This must be received by **11pm MST on class day**.
 * The lowest activity grade will be dropped.
 
@@ -225,7 +225,7 @@ _Online sections:_
 Each week, you will work through that week's coursepack group activity while watching a guided activity video on D2L. Completion of the activity counts towards this portion of your grade.
 
 * Activities must be completed on the activity worksheet. If you prefer to complete the activity on a pdf copy using a stylist-enabled device, please speak to your instructor, and he or she will provide you with the appropriate materials.
-* Completed activities are due in Gradescope each **Friday by 11pm MST**.
+* Completed activities, including both the "in-class" and "out-of-class" portions, are due in Gradescope each **Friday by 11pm MST**.
 * The lowest activity grade will be dropped.
 
 
@@ -243,11 +243,11 @@ There will be two in-class midterm exams (worth 15% each). Details and instructi
 
 _Blended sections_:
 
-Midterm exam 1 will be during the week of **February 15--19**; Midterm exam 2 during **April 12--16**. Potential midterm exam questions will be released the week prior to the exam, and you will be given a randomly chosen subset of these questions for your exam, taken in-class during your cohort's scheduled in-class time.
+Midterm exam 1 will be during the week of **February 22--26**; Midterm exam 2 during **April 12--16**. Potential midterm exam questions will be released the week prior to the exam, and you will be given a randomly chosen subset of these questions for your exam, taken in-class during your cohort's scheduled in-class time.
 
 _Online sections_:
 
-Midterm exam 1 will be on **Friday, February 19**; Midterm exam 2 will be on **Friday, April 16**. The exam will be taken in [Gradescope](https://www.gradescope.com/). The exam window will be open 6am--11pm on exam day, and you will have 75 minutes from the time you start the exam or until 11pm (whichever comes first) to complete the exam.
+Midterm exam 1 will be on **Friday, February 26**; Midterm exam 2 will be on **Friday, April 16**. The exam will be taken in [Gradescope](https://www.gradescope.com/). The exam window will be open 6am--11pm on exam day, and you will have 75 minutes from the time you start the exam or until 11pm (whichever comes first) to complete the exam.
 
 ### Group project (20%)
 
